[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/Player/PlayerInfoUI.gd" type="Script" id=1]
[ext_resource path="res://Components/UI/Resources/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="PlayerInfoUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Backdrop" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.0823529 )
margin_left = 7.0
margin_top = 499.481
margin_right = 338.0
margin_bottom = 591.481
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="RichTextLabel" parent="Backdrop"]
margin_left = 11.0
margin_top = 7.0
margin_right = 321.0
margin_bottom = 28.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Health: %s / %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="RichTextLabel" parent="Backdrop"]
margin_left = 9.0
margin_top = 39.0
margin_right = 322.0
margin_bottom = 68.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Ammo: %s / %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagLabel" type="RichTextLabel" parent="Backdrop"]
margin_left = 9.0
margin_top = 68.0
margin_right = 317.0
margin_bottom = 89.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Magazine: %s / %s"
__meta__ = {
"_edit_use_anchors_": false
}
